--- a/config_ui.yaml
+++ b/config_ui.yaml
@@ -1,20 +1,24 @@
 slm1:
+  device_type: "upo"  # upo 或 holoeye
   screen_num: 1
   bolduc_period: 8
   compensation_path: ""
   play_interval_ms: 500
+  sdk_path: ""
 
 slm2:
+  device_type: "holoeye"  # upo 或 holoeye
   compensation_path: ""
   sdk_path: ""
+  screen_num: 2
   block_mode: "checkerboard"
   outside_mode: "zero"
   window_size_px: [400, 400]
   default_centers:
-    - [480, 300]
-    - [960, 300]
-    - [480, 800]
-    - [960, 800]
+    - [240, 540]
+    - [720, 540]
+    - [1200, 540]
+    - [1680, 540]
   layers:
     - {path: "", dx: 0, dy: 0, enabled: true}
     - {path: "", dx: 0, dy: 0, enabled: true}
@@ -28,6 +32,9 @@ camera:
   gain: 0.0
   avg_frames: 3
   target_fps: 30
+  overexposure_threshold: 250
+  overexposure_ratio: 0.01
+  record_interval_ms: 200
 
 output:
   slm1_tmp_dir: "output/slm1_tmp"
