--- a/config_ui.yaml
+++ b/config_ui.yaml
@@ -1,6 +1,7 @@
 slm1:
   device_type: "upo"  # upo 或 holoeye
   screen_num: 1
+  heds_selector: ""
   bolduc_period: 8
   amp_norm_max: 0.9
   compensation_path: ""
@@ -12,6 +13,7 @@ slm2:
   compensation_path: ""
   sdk_path: ""
   screen_num: 2
+  heds_selector: ""
   block_mode: "checkerboard"
   outside_mode: "zero"
   window_size_px: [400, 400]
@@ -30,6 +32,7 @@ slm2:
 camera:
   device_sn: ""
   exposure_us: 20000
+  auto_exposure: false
   gain: 0.0
   avg_frames: 3
   target_fps: 30
