--- a/config_ui.yaml
+++ b/config_ui.yaml
@@ -33,6 +33,12 @@ camera:
   device_sn: ""
   exposure_us: 20000
   auto_exposure: false
+  auto_exposure_mode: "software"  # software 或 camera
+  auto_exposure_target: 120.0
+  auto_exposure_interval_ms: 200
+  auto_exposure_min_ratio: 0.5
+  auto_exposure_max_ratio: 2.0
+  auto_exposure_tolerance: 0.02
   gain: 0.0
   avg_frames: 1
   target_fps: 40
