忘了改了什么，一个非常好的版本

--- a/config_ui.yaml
+++ b/config_ui.yaml
@@ -7,6 +7,8 @@ slm1:
   compensation_path: ""
   play_interval_ms: 500
   sdk_path: ""
+  pixel_pitch_um: 8.0
+  wavelength_nm: 532.0
 
 slm2:
   device_type: "holoeye"  # upo 或 holoeye
